title and name change

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/utilities.css" />
-    <title>POO Website</title>
+    <title>POOO Website</title>
   </head>
   <body>
     <!-- Header -->
     <header class="dark">
       <i class="fas fa-wind fa-3x white"></i>
-      <h2 class="white">POO</h2>
+      <h2 class="white">POOO</h2>
     </header>
 
     <!-- Main-Content -->
