dark mode enabled

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
     <!-- Main-Content -->
     <div class="main">
-      <h3 class="center">Click on the butt</h3>
+      <h3 class="click-instruction center">
+        Click on the butt
+        <div class="center">
+          <input type="checkbox" />
+        </div>
+      </h3>
       <div class="butt-container center">
         <div class="butt butt-1">
           <svg
